# openai-proxy

./: .gitmodules  Cargo.toml  envoy.yaml
.github/workflows/: build.yaml  cargo.yaml
adaptor-vllm/: Cargo.toml
adaptor-vllm/src/: main.rs
control-plane/: Cargo.toml
control-plane/src/: aggregated_discovery_service.rs  lb.rs  main.rs  resolver.rs  vllm.rs
control-plane/src/lb/: generator.rs  resolver.rs
control-plane/src/vllm/: generator.rs  resolver.rs
misc/: Cargo.toml
misc/src/: envoy.rs  hyper.rs  lib.rs  pbjson.rs
openai-proxy-common/: Cargo.toml
openai-proxy-common/src/: lib.rs
openai-proxy-control-plane/: Cargo.toml
openai-proxy-control-plane/src/: aggregated_discovery_service.rs  main.rs  resolver.rs  schemas.rs
openai-proxy-external-processor/: Cargo.toml
openai-proxy-external-processor/src/: main.rs
openai-proxy-resolver/: Cargo.toml
openai-proxy-resolver/src/: aggregated_discovery_service.rs  main.rs
schemas/: Cargo.toml
schemas/src/: lib.rs
src/: auth.rs  azure.rs  main.rs  misc.rs  mux.rs  route.rs
src/misc/: metrics.rs  pool.rs  schemas.rs
src/mux/: backend.rs  client.rs  metrics.rs  server.rs
tonic-envoy/: Cargo.toml  build.rs
tonic-envoy/src/: lib.rs
