[workspace]
members = ["adaptor-vllm", "control-plane", "misc", "schemas", "tonic-envoy"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bytes = "1.10.1"
clap = "4.5.41"
futures = "0.3.31"
hex = "0.4.3"
hickory-resolver = "0.25.2"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
http-serde = "2.1.1"
humantime = "2.2.0"
humantime-serde = "1.1.1"
hyper = "1.6.0"
hyper-rustls = "0.27.7"
hyper-util = "0.1.15"
nom = "8.0.0"
openmetrics-nom.git = "https://github.com/Hakuyume/openmetrics-nom.git"
prost = "0.13.5"
prost-build = "0.13.5"
prost-types = "0.13.5"
rand = "0.9.2"
rustls = "0.23.29"
serde = "1.0.219"
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
tokio = "1.46.1"
tokio-stream = "0.1.17"
tonic = "0.13.1"
tonic-build = "0.13.1"
tonic-health = "0.13.1"
tonic-reflection = "0.13.1"
tonic-types = "0.13.1"
tower = "0.5.2"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
