[workspace]
members = ["control-plane", "misc", "schemas", "tonic-envoy"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
clap = "4.5.56"
futures = "0.3.31"
hex = "0.4.3"
hickory-resolver = "0.25.2"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
http-serde = "2.1.1"
humantime = "2.3.0"
humantime-serde = "1.1.1"
hyper = "1.8.1"
hyper-rustls = "0.27.7"
hyper-util = "0.1.19"
nom = "8.0.0"
openmetrics-nom.git = "https://github.com/Hakuyume/openmetrics-nom.git"
pbjson = "0.9.0"
pbjson-build = "0.9.0"
pbjson-types = "0.9.0"
proc-macro2 = "1.0.106"
prost = "0.14.3"
prost-build = "0.14.3"
prost-types = "0.14.3"
quote = "1.0.44"
rand = "0.9.2"
rustls = "0.23.36"
serde = "1.0.228"
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-stream = "0.1.18"
tonic = "0.14.3"
tonic-health = "0.14.3"
tonic-prost = "0.14.3"
tonic-prost-build = "0.14.3"
tonic-reflection = "0.14.3"
tonic-types = "0.14.3"
tower = "0.5.3"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.22"
uuid = "1.20.0"
