[package]
name = "adaptor-vllm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["http2"] }
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
http.workspace = true
http-body-util.workspace = true
humantime.workspace = true
hyper.workspace = true
misc.path = "../misc"
nom.workspace = true
openmetrics-nom.workspace = true
schemas.path = "../schemas"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
