[package]
name = "control-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
hex.workspace = true
hickory-resolver.workspace = true
http.workspace = true
http-serde.workspace = true
humantime.workspace = true
humantime-serde.workspace = true
misc.path = "../misc"
nom.workspace = true
openmetrics-nom.workspace = true
prost.workspace = true
prost-types.workspace = true
rand.workspace = true
rustls.workspace = true
schemas.path = "../schemas"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic.workspace = true
tonic-envoy.path = "../tonic-envoy"
tonic-health.workspace = true
tonic-reflection.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-futures = { workspace = true, features = ["futures-03"] }
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
