[package]
name = "openai-proxy-control-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
hex.workspace = true
http.workspace = true
prost.workspace = true
prost-types.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic.workspace = true
tonic-envoy.path = "../tonic-envoy"
tonic-reflection.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
