[package]
name = "openai-proxy-control-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
hex.workspace = true
hickory-resolver.workspace = true
http.workspace = true
http-body-util.workspace = true
http-serde.workspace = true
humantime-serde.workspace = true
hyper-rustls = { workspace = true, features = ["http1", "http2", "webpki-roots"] }
hyper-util = { workspace = true, features = ["client-legacy", "http1", "http2", "tokio"] }
openai-proxy-common.path = "../openai-proxy-common"
prost.workspace = true
prost-types.workspace = true
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic.workspace = true
tonic-envoy.path = "../tonic-envoy"
tonic-health.workspace = true
tonic-reflection.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-futures = { workspace = true, features = ["futures-03"] }
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
