[package]
name = "openai-proxy-external-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
openai-proxy-common.path = "../openai-proxy-common"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
tonic-envoy.path = "../tonic-envoy"
tonic-health.workspace = true
tonic-reflection.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
