[package]
name = "openai-proxy-resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
http.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tonic.workspace = true
tonic-envoy.path = "../tonic-envoy"
tonic-reflection.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
