[package]
name = "tonic-envoy"
version = "0.1.0"
edition = "2024"

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tonic-types.workspace = true

[build-dependencies]
proc-macro2.workspace = true
prost-build.workspace = true
quote.workspace = true
tonic-prost-build.workspace = true
